# form-management-api

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  postman_collection.json  pyproject.toml  run.py
app/: __init__.py  errors.py
app/api/auth/: __init__.py  methods.py  schemas.py
app/api/auth/logout/: __init__.py  methods.py
app/api/auth/refresh/: __init__.py  methods.py  schemas.py
app/api/forms/: __init__.py  methods.py  schemas.py
app/api/forms/active/: __init__.py  methods.py
app/api/forms/detail/: __init__.py  (+2 more)
app/api/permissions/: __init__.py  methods.py
app/api/roles/: __init__.py  methods.py  schemas.py
app/api/submissions/: __init__.py  methods.py  schemas.py
app/api/users/: __init__.py  methods.py  schemas.py
app/auth/: decorators.py  jwt_utils.py
app/bases/api/: factory.py  method_handler.py  openapi.py  resource.py
app/common/: utils.py
app/models/: __init__.py  base.py  field.py  form.py  permission.py  role.py  role_permission.py  submission.py  submission_answer.py  token_blacklist.py  user.py  user_role.py
app/services/: auth_service.py  field_service.py  form_service.py  role_service.py  submission_service.py  user_service.py
app/validators/: base.py  color.py  date.py  number.py  registry.py  select.py  submission_validator.py  text.py
migrations/: env.py
migrations/versions/: 5920e1a55b9d_init_schema.py  8ec9549bc6db_add_token_blacklist_table.py
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_fields_api.py  test_forms_api.py  test_submissions_api.py  test_validators.py
(+18 files in other folders)
